attached_assets/Pasted-12-01-10-PM-express-POST-api-projects-workflow-200-in-538ms-success-true-project-id-20-1749470558296_1749470558296.txt
12:01:10 PM [express] POST /api/projects/workflow 200 in 538ms :: {"success":true,"project":{"id":20,…
12:01:12 PM [express] GET /api/projects/20/workflow 304 in 255ms :: {"projectId":20,"currentStep":"pr…
12:01:13 PM [express] GET /api/projects/20 200 in 128ms :: {"id":20,"userId":1,"title":"The Matrix","…
12:01:13 PM [express] GET /api/projects/20/casting 304 in 92ms :: []
12:01:13 PM [express] GET /api/projects/20/characters 304 in 96ms :: [{"id":97,"projectId":20,"name":…
12:01:13 PM [express] GET /api/projects/20/casting/analysis 304 in 139ms :: {"scriptTitle":"The Matri…
12:01:13 PM [express] GET /api/projects/20/scenes 304 in 323ms :: [{"id":3752,"projectId":20,"sceneNu…
12:01:13 PM [express] GET /api/projects/20/scene-breakdown 304 in 224ms :: {"success":true,"projectId…
[AI Client] Error parsing JSON response: SyntaxError: Unexpected non-whitespace character after JSON at position 236
    at JSON.parse (<anonymous>)
    at extractJsonFromText (/home/runner/workspace/server/services/ai-agents/ai-client.ts:241:17)
    at generateProductPlacement (/home/runner/workspace/server/script-analysis-agents.ts:615:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
    at async <anonymous> (/home/runner/workspace/server/comprehensive-analysis-routes.ts:1048:45)
[AI Client] Raw text: ```json
[
  {
    "sceneId": "3752",
    "brand": "Google",
    "product": "Chrome browser",
    "placement": "Visible on the computer screen as the default browser.",
    "naturalness": 9,
    "visibility": "subtle",
    "estimatedValue": 5000
  },
  {
    "sceneId": "3759",
    "brand": "Microsoft",
    "product": "Windows 11",
    "placement": "Subtly visible in the taskbar or start menu of the computer screen.",
    "naturalness": 9,
    "visibility": "subtle",
    "estimatedValue": 5000
  },
  {
    "sceneId": "3760",
    "brand": "Dell",
    "product": "Alienware monitor",
    "placement": "A high-end monitor is visible on a desk in the office.",
    "naturalness": 7,
    "visibility": "subtle",
    "estimatedValue": 7000
  },
  {
    "sceneId": "3760",
    "brand": "Logitech",
    "product": "MX Master 3 mouse",
    "placement": "A high-end mouse is visible on the desk next to the keyboard.",
    "naturalness": 8,
    "visibility": "subtle",
    "estimatedValue": 3000
  },
  {
    "sceneId": "3765",
    "brand": "Nespresso",
    "product": "Vertuo coffee machine",
    "placement": "A sleek coffee machine sits on the kitchen counter in Neo's apartment.",
    "naturalness": 8,
    "visibility": "subtle",
    "estimatedValue": 6000
  },
  {
    "sceneId": "3767",
    "brand": "Toyota",
    "product": "Prius Prime",
    "placement": "The car is a futuristic-looking hybrid, subtly showcasing technology without being overly branded.",
    "naturalness": 7,
    "visibility": "subtle",
    "estimatedValue": 10000
  },
  {
    "sceneId": "3825",
    "brand": "Coca-Cola",
    "product": "Coca-Cola Zero Sugar",
    "placement": "A bottle is subtly visible on a table in a restaurant scene.",
    "naturalness": 8,
    "visibility": "subtle",
    "estimatedValue": 8000
  },
  {
    "sceneId": "3831",
    "brand": "Tesla",
    "product": "Model S",
    "placement": "A sleek Tesla Model S is visible in the car scene, reflecting the futuristic setting.",
    "naturalness": 7,
    "visibility": "subtle",
    "estimatedValue": 12000
  },
  {
    "sceneId": "3869",
    "brand": "Sony",
    "product": "Bravia TV",
    "placement": "A damaged TV screen is visible in a TV repair shop, showcasing the brand subtly.",
    "naturalness": 8,
    "visibility": "subtle",
    "estimatedValue": 4000
  },
  {
    "sceneId": "3921",
    "brand": "Samsung",
    "product": "Galaxy S23",
    "placement": "A character briefly uses a Samsung phone to make a call, visible only for a few seconds.",
    "naturalness": 9,
    "visibility": "subtle",
    "estimatedValue": 3000
  },
    {
    "sceneId": "3970",
    "brand": "Nokia",
    "product": "Classic 3310",
    "placement": "An old-fashioned, iconic Nokia phone in a street phone booth.",
    "naturalness": 9,
    "visibility": "subtle",
    "estimatedValue": 2000
  }
]
```

12:01:25 PM [express] POST /api/script-analysis/product_placement 200 in 6944ms :: {"success":true,"p…
Brandable scenes analysis error: ReferenceError: Cannot access 'sceneBreakdowns2' before initialization
    at <anonymous> (/home/runner/workspace/server/comprehensive-analysis-routes.ts:954:15)
    at Layer.handle [as handle_request] (/home/runner/workspace/node_modules/express/lib/router/layer.js:95:5)
    at next (/home/runner/workspace/node_modules/express/lib/router/route.js:149:13)
    at Route.dispatch (/home/runner/workspace/node_modules/express/lib/router/route.js:119:3)
    at Layer.handle [as handle_request] (/home/runner/workspace/node_modules/express/lib/router/layer.js:95:5)
    at /home/runner/workspace/node_modules/express/lib/router/index.js:284:15
    at Function.process_params (/home/runner/workspace/node_modules/express/lib/router/index.js:346:12)
    at next (/home/runner/workspace/node_modules/express/lib/router/index.js:280:10)
    at <anonymous> (/home/runner/workspace/server/index.ts:65:3)
    at Layer.handle [as handle_request] (/home/runner/workspace/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/runner/workspace/node_modules/express/lib/router/index.js:328:13)
    at /home/runner/workspace/node_modules/express/lib/router/index.js:286:9
    at Function.process_params (/home/runner/workspace/node_modules/express/lib/router/index.js:346:12)
    at next (/home/runner/workspace/node_modules/express/lib/router/index.js:280:10)
    at /home/runner/workspace/node_modules/express-session/index.js:514:7
    at /home/runner/workspace/node_modules/connect-pg-simple/index.js:370:18
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
12:01:25 PM [express] POST /api/script-analysis/identify_brandable_scenes 500 in 44ms :: {"error":"Fa…
^[[1;2B